document.

General Changes
- Deadly poison is no longer an instant kill, and instead does 1-13 extra
  damage. This change does not affect monsters.
- Monsters are now capable of sacrificing corpses on altars, and all monsters
  that like objects will now pick up corpses (as opposed to just nymphs).
  In rare cases, this can result in monsters being gifted artifacts.
-If a monster on the Astral Plane somehow obtains the Amulet of Yendor and
  makes it to an altar, they will attempt to sacrifice it and gain immortality,
  causing an instant loss. Getting this to happen is probably about as difficult
  as winning the game.
- Gaining a resistance other than poison resistance through food will cause you
  to lose your other resistances. This feature can be toggled off in the
  preferences file.
- Decreased floating eye spawn rate to make blind telepathy harder to obtain.
- Mysterious force now only affects you when you are hallucinating (you
  suddenly hallucinate that you are playing vanilla Nethack!)
- There are different descriptions for venom which are randomized each game.
  This may break realism slightly, but does help with distinguishing what kind
  of venom an unfamiliar monster might be spitting.
- Tigers now are colored orange, in order to make room for lions, which are
  colored yellow.
- Disarmed bear traps and land mines can rarely be generated.
- The Oracle now drops hints in major consultations about the new features
  in GlazeHack. Attempts have been made to make this fit as seamlessly as
  possible into the existing tone.
- Additional graves, hallucinations, rumors, scroll and wand names,  and
  the like.
- Spellcasting monsters have access to a much larger variety of dangerous
  spells.
- Engraving "The Yellow Sign" will cause bad things to happen to you and those
  around you.
- Monster wielding behavior was changed so monsters are more aggressive about
  wielding new items.
- VENOM_CLASS and Q_CLASS are referred to differently in game.