@@ -685,6 +685,7 @@ intervene()
     /* cases 0 and 5 don't apply on the Astral level */
     switch (which) {
     case 0:
+        You_feel("anxious.");
     case 1:
         You_feel("vaguely nervous.");
         break;
