@@ -10,10 +10,16 @@ General Changes
 - Monsters are now capable of sacrificing corpses on altars, and all monsters
   that like objects will now pick up corpses (as opposed to just nymphs).
   In rare cases, this can result in monsters being gifted artifacts.
--If a monster on the Astral Plane somehow obtains the Amulet of Yendor and
+- If a monster on the Astral Plane somehow obtains the Amulet of Yendor and
   makes it to an altar, they will attempt to sacrifice it and gain immortality,
-  causing an instant loss. Getting this to happen is probably about as difficult
-  as winning the game.
+  causing an instant loss.
+- Increased number of player monsters in the endgame.
+- Player monsters no longer spawn with offensive items, making them much more
+  likely to employ their artifacts. Player monsters also have a larger variety
+  of artifacts that they can spawn with. Their abilities have been diversified
+  somewhat, but all of them are now capable of stealing the amulet with their
+  attacks.
+- Upon stealing the amulet, if in the endgame a monster will try to flee.
 - Gaining a resistance other than poison resistance through food will cause you
   to lose your other resistances. This feature can be toggled off in the
   preferences file.
